:sparkles: Allow for absolute positioned elements inside layout

--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -1672,7 +1672,8 @@
       .align-self-style,
       .justify-content-style,
       .align-content-style,
-      .layout-behavior {
+      .layout-behavior,
+      .absolute {
         display: flex;
         border-radius: $br4;
         border: 1px solid $color-gray-60;
@@ -1693,8 +1694,10 @@
           border: none;
           cursor: pointer;
           border-right: 1px solid $color-gray-60;
+          color: $color-gray-20;
           &.active,
           &:hover {
+            color: $color-primary;
             svg {
               fill: $color-primary;
             }
