--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -1739,6 +1739,15 @@
           border-right: none;
         }
       }
+      .z-index {
+        display: flex;
+        align-items: center;
+        margin-left: 2px;
+        margin-top: -4px;
+        svg {
+          width: 30px;
+        }
+      }
     }
   }
   .no-wrap {
