--- a/frontend/resources/styles/main/partials/workspace.scss
+++ b/frontend/resources/styles/main/partials/workspace.scss
@@ -353,7 +353,7 @@ $height-palette-max: 80px;
   align-items: center;
   height: 20px;
   font-size: $fs12;
-  line-height: 1.5;
+  line-height: $lh-150;
 }
 
 .viewport-actions {
