--- a/frontend/resources/styles/common/framework.scss
+++ b/frontend/resources/styles/common/framework.scss
@@ -501,7 +501,7 @@ input[type="radio"],
 input[type="checkbox"] {
   box-sizing: border-box;
   cursor: pointer;
-  line-height: normal;
+  line-height: $lh-normal;
   margin-top: 1px 0 0;
 }
 
