--- a/frontend/resources/styles/main/partials/comments.scss
+++ b/frontend/resources/styles/main/partials/comments.scss
@@ -411,7 +411,7 @@
       font-weight: $fw400;
       color: $color-black;
       font-size: $fs14;
-      line-height: $fs18;
+      line-height: $lh-128; // Original value was $fs18 => 1.125rem = 18px; 18px/14px = 128.571428571% => $lh-128 (rounded)
       flex-grow: 1;
     }
 
