:recycle: Connect line-heigh values to variables and set scale
Signed-off-by: Ondřej Konečný <ondrej.konecny@gmail.com>

--- a/frontend/resources/styles/common/framework.scss
+++ b/frontend/resources/styles/common/framework.scss
@@ -500,7 +500,7 @@ input[type="radio"],
 input[type="checkbox"] {
   box-sizing: border-box;
   cursor: pointer;
-  line-height: normal;
+  line-height: $lh-normal;
   margin-top: 1px 0 0;
 }
 
