--- a/frontend/resources/styles/main/partials/sidebar.scss
+++ b/frontend/resources/styles/main/partials/sidebar.scss
@@ -189,7 +189,7 @@
   .empty {
     color: $color-gray-20;
     font-size: $fs12;
-    line-height: 1.5;
+    line-height: $lh-150;
     text-align: center;
     padding: 0 15px;
     display: flex;
