:sparkles: Add css variables and theme switch

--- a/frontend/resources/styles/common/refactor/borders.scss
+++ b/frontend/resources/styles/common/refactor/borders.scss
@@ -4,7 +4,18 @@
 //
 // Copyright (c) KALEIDOS INC
 
-$autocomplete: 30000;
-$index-lightbox-shadow: 60000;
-$index-lightbox: 60001;
-$index-lightbox-close-x: 200;
+// Border radius
+$br0: 0px;
+$br2: 2px;
+$br3: 3px;
+$br4: 4px;
+$br5: 5px;
+$br6: 6px;
+$br7: 7px;
+$br8: 8px;
+$br10: 10px;
+$br12: 12px;
+$br25: 25px;
+$br50: 50px;
+$br99: 99px;
+$br-circle: 50%;
