:bug: Fix full screen not clickable on inspect mode after user entered full screen

--- a/frontend/resources/styles/main/partials/viewer-header.scss
+++ b/frontend/resources/styles/main/partials/viewer-header.scss
@@ -54,6 +54,7 @@
     display: flex;
     justify-content: flex-end;
     position: relative;
+    z-index: 10;
 
     > * {
       margin-left: $size-5;
