:bug: Fix style for absolute positioning

--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -1705,6 +1705,7 @@
           color: $color-gray-20;
           &.active,
           &:hover {
+            color: $color-primary;
             &.dir {
               color: $color-primary;
             }
