--- a/frontend/resources/styles/common/base.scss
+++ b/frontend/resources/styles/common/base.scss
@@ -6,7 +6,7 @@
 // Copyright (c) 2015-2016 Juan de la Cruz <delacruzgarciajuan@gmail.com>
 
 :root {
-  --font-family: "worksans", sans-serif;
+  --font-family: "worksans", "notocoloremoji", sans-serif;
 }
 
 body {
