:bug: Fix visual problem in select options

--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -195,6 +195,10 @@
   }
 
   .input-select {
+    /* This padding is so the text won't overlap the arrow*/
+    padding-right: 1rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
     color: $color-gray-10;
 
     &:focus {
