:bug: Fix expanded typography on assets sidebar is moving

--- a/frontend/resources/styles/main/partials/sidebar-assets.scss
+++ b/frontend/resources/styles/main/partials/sidebar-assets.scss
@@ -339,6 +339,10 @@
 
     .typography-container {
       position: relative;
+
+      &:last-child {
+        padding-bottom: 0.5em;
+      }
     }
 
     .drag-counter {
