:bug: Fix dashboard scrolling using 'Page Up' and 'Page Down'

--- a/frontend/resources/templates/index.mustache
+++ b/frontend/resources/templates/index.mustache
@@ -37,7 +37,7 @@
   <body>
     {{>../public/images/sprites/symbol/icons.svg}}
     {{>../public/images/sprites/symbol/cursors.svg}}
-    <div id="app" tabindex="0"></div>
+    <div id="app"></div>
     <section id="modal"></section>
     {{# manifest}}
     <script src="{{& shared}}"></script>
