:sparkles: removed sizing variables from radius
Signed-off-by: Ondřej Konečný <ondrej.konecny@gmail.com>

--- a/frontend/resources/styles/common/refactor/borders.scss
+++ b/frontend/resources/styles/common/refactor/borders.scss
@@ -10,11 +10,11 @@ $br2: $s-2;
 $br3: 3px;
 $br4: 4px;
 $br5: 5px;
-$br6: $s-6;
+$br6: 6px;
 $br7: 7px;
-$br8: $s-8;
+$br8: 8px;
 $br10: 10px;
-$br12: $s-12;
+$br12: 12px;
 $br25: 25px;
 $br50: 50px;
 $br99: 99px;
