:bug: fix sidebar collapse icon
Signed-off-by: Ondřej Konečný <ondrej.konecny@gmail.com>

--- a/frontend/resources/styles/main/partials/sidebar-assets.scss
+++ b/frontend/resources/styles/main/partials/sidebar-assets.scss
@@ -112,6 +112,7 @@
 
   .collapse-library {
     margin-right: $size-2;
+    flex-shrink: inherit; // Inheriting shrink behaviour
 
     &.open svg {
       transform: rotate(90deg);
