--- a/frontend/resources/styles/main/partials/dashboard-grid.scss
+++ b/frontend/resources/styles/main/partials/dashboard-grid.scss
@@ -358,6 +358,15 @@
 
   // LIBRARY VIEW
   .grid-item {
+    .library {
+      height: 556px;
+    }
+
+    .info-wrapper {
+      border: 1px solid $color-gray-10;
+      border-radius: 3px;
+    }
+
     &.project-th.library {
       height: 610px;
       width: 300px;
