--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -2331,9 +2331,8 @@
 .component-annotation {
   background-color: $color-gray-60;
   border: 1px solid $color-gray-60;
-  &.editing {
-    border: 1px solid $color-primary;
-  }
+  border-radius: 2px;
+
   .title {
     display: flex;
     align-items: center;
@@ -2365,28 +2364,39 @@
     .icon {
       display: none;
       cursor: pointer;
+      svg {
+        fill: $color-gray-20;
+        width: $size-4;
+        height: $size-4;
+        margin-left: 15px;
+        &.icon-cross {
+          width: $size-3;
+          height: $size-3;
+        }
+      }
+
+      .icon-tick:hover,
+      .icon-pencil:hover {
+        fill: $color-primary;
+      }
+
+      .icon-cross:hover,
+      .icon-trash:hover {
+        fill: $color-danger;
+      }
     }
 
     &:hover {
       .icon {
         display: flex;
-        svg {
-          fill: $color-gray-20;
-          width: $size-4;
-          height: $size-4;
-          margin-left: 15px;
-        }
-
-        .icon-tick:hover,
-        .icon-pencil:hover {
-          fill: $color-primary;
-        }
-
-        .icon-cross:hover,
-        .icon-trash:hover {
-          fill: $color-danger;
-        }
       }
+    }
+  }
+
+  &.editing {
+    border: 1px solid $color-primary;
+    .title .icon {
+      display: flex;
     }
   }
 
