--- a/frontend/resources/styles/main/partials/text-palette.scss
+++ b/frontend/resources/styles/main/partials/text-palette.scss
@@ -9,6 +9,10 @@
 
   & .typography-name {
     color: $color-white;
+    max-width: 160px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   & .typography-font,
