:bug: Fix some onboarding survey issues

--- a/frontend/resources/styles/main/partials/forms.scss
+++ b/frontend/resources/styles/main/partials/forms.scss
@@ -322,6 +322,7 @@ textarea {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    font-family: "worksans", sans-serif;
     justify-content: center;
     padding-top: 6px;
     padding-bottom: 6px;
