--- a/frontend/resources/styles/main/partials/tab-container.scss
+++ b/frontend/resources/styles/main/partials/tab-container.scss
@@ -30,6 +30,15 @@
   }
 }
 
+.tab-container-content {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.inspect .tab-container-content {
+  overflow: hidden;
+}
+
 .tab-element,
 .tab-element-content {
   height: 100%;
