:sparkles: Adds grid to the actibable features

--- a/frontend/resources/styles/main/layouts/inspect.scss
+++ b/frontend/resources/styles/main/layouts/inspect.scss
@@ -119,7 +119,7 @@ $width-settings-bar: 256px;
       }
     }
 
-    &.settings-bar-right, {
+    &.settings-bar-right {
       width: 100%;
     }
   }
