--- a/frontend/src/app/main/ui/workspace/viewport/grid_layout_editor.scss
+++ b/frontend/src/app/main/ui/workspace/viewport/grid_layout_editor.scss
@@ -32,7 +32,7 @@
 }
 
 .grid-frame {
-  fill: #F6F6F6;
+  fill: #f6f6f6;
   stroke: var(--color-distance);
   stroke-width: calc(1 / var(--zoom));
 }
