--- a/frontend/src/app/main/ui/workspace/sidebar/assets/file_library.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/assets/file_library.scss
@@ -32,7 +32,7 @@
     width: $s-28;
     border-radius: $br-8;
     svg {
-      @extend .button-icon-small;
+      @extend .button-icon;
       fill: var(--title-foreground-color-hover);
     }
   }
