:lipstick: Toolbar redesign

--- a/frontend/src/app/main/ui/workspace/sidebar/assets/file_library.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/assets/file_library.scss
@@ -19,6 +19,8 @@
   }
 
   .special-title {
+    @include textEllipsis;
+    width: calc(var(--width, 256px) - $s-80);
     color: var(--title-foreground-color-hover);
   }
   .special-subtitle {
