:lipstick: Add  minor cosmetic improvement on error report template

--- a/backend/resources/app/templates/error-report.v3.tmpl
+++ b/backend/resources/app/templates/error-report.v3.tmpl
@@ -1,7 +1,7 @@
  {% extends "app/templates/base.tmpl" %}
 
 {% block title %}
-penpot - error report v2 {{id}}
+Report: {{hint|abbreviate:150}} - {{id}} - Penpot Error Report (v3)
 {% endblock %}
 
 {% block content %}
