:sparkles: Add improvements to api doc

--- a/backend/resources/app/templates/api-doc-entry.tmpl
+++ b/backend/resources/app/templates/api-doc-entry.tmpl
@@ -22,11 +22,7 @@
       {% endif %}
       {% if item.params-schema-js %}
         <span class="tag">
-          <span>SC</span>
-        </span>
-      {% else %}
-        <span class="tag">
-          <span>SP</span>
+          <span>SCHEMA</span>
         </span>
       {% endif %}
     </div>
