:paperclip: Fix typo on api doc main template

--- a/backend/resources/app/templates/api-doc.tmpl
+++ b/backend/resources/app/templates/api-doc.tmpl
@@ -38,7 +38,7 @@
         <h2>GENERAL NOTES</h2>
 
         <h3>Authentication</h3>
-        <p>The penpot backend right now offerts two way for authenticate the request:
+        <p>The penpot backend right now offers two way for authenticate the request:
         <b>cookies</b> (the same mechanism that we use ourselves on accessing the API from the
         web application) and <b>access tokens</b>.</p>
 
