--- a/frontend/src/app/main/ui/components/title_bar.scss
+++ b/frontend/src/app/main/ui/components/title_bar.scss
@@ -13,7 +13,9 @@
   height: $s-32;
   width: 100%;
   min-height: $s-32;
+  margin: $s-4 0;
   background-color: var(--title-background-color);
+  padding-right: $s-8;
   .title,
   .title-only {
     @include tabTitleTipography;
