--- a/frontend/src/app/main/ui/workspace/sidebar/layers.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/layers.scss
@@ -20,7 +20,6 @@
     min-height: $s-32;
     margin-top: $s-2;
     margin-bottom: $s-4;
-    padding-right: $s-8;
     .page-name {
       @include tabTitleTipography;
       padding: 0 $s-12;
@@ -238,7 +237,7 @@
     width: 100%;
     overflow-y: auto;
     overflow-x: hidden;
-    scrollbar-gutter: stable;
+    // scrollbar-gutter: stable;
     overflow-y: overlay;
     .element-list {
       width: 100%;
