--- a/frontend/src/app/main/ui/workspace/sidebar/sitemap.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/sitemap.scss
@@ -52,7 +52,7 @@
     flex-direction: column;
     overflow-y: auto;
     overflow-x: hidden;
-    scrollbar-gutter: stable;
+    // scrollbar-gutter: stable;
     overflow-y: overlay;
     height: 100%;
     width: 100%;
