:lipstick: Fix color assets and styles

--- a/frontend/resources/styles/common/refactor/spacing.scss
+++ b/frontend/resources/styles/common/refactor/spacing.scss
@@ -41,6 +41,7 @@ $s-148: calc(var(--s-4) * 37);
 $s-152: calc(var(--s-4) * 38);
 $s-160: calc(var(--s-4) * 40);
 $s-168: calc(var(--s-4) * 42);
+$s-180: calc(var(--s-4) * 45);
 $s-184: calc(var(--s-4) * 46);
 $s-192: calc(var(--s-4) * 48);
 $s-196: calc(var(--s-4) * 49);
