--- a/frontend/src/app/main/ui/workspace/sidebar/assets/colors.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/assets/colors.scss
@@ -26,7 +26,7 @@
       display: flex;
       align-items: center;
       height: $s-32;
-      padding: $s-8 $s-12 $s-8 $s-8;
+      padding: $s-8;
       margin-bottom: $s-4;
       border-radius: $br-8;
       background-color: var(--assets-item-background-color);
@@ -34,7 +34,8 @@
       .bullet-block {
         @include flexCenter;
         height: 100%;
-        width: $s-32;
+        justify-content: flex-start;
+        margin-right: $s-4;
       }
       .name-block {
         @include titleTipography;
