--- a/frontend/src/app/main/ui/components/title_bar.scss
+++ b/frontend/src/app/main/ui/components/title_bar.scss
@@ -36,16 +36,14 @@
     display: flex;
     align-items: center;
     flex-grow: 1;
-    gap: $s-4;
     padding: 0;
     color: var(--title-foreground-color);
     stroke: var(--title-foreground-color);
     .collased-icon {
       @include flexCenter;
       height: $s-24;
-      width: $s-24;
       border-radius: $br-8;
-      padding: 0 $s-4 0 $s-8;
+      padding-left: $s-8;
       svg {
         @extend .button-icon-small;
         transform: rotate(90deg);
