--- a/frontend/src/app/main/ui/workspace/sidebar/assets/file_library.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/assets/file_library.scss
@@ -20,14 +20,11 @@
 
   .special-title {
     @include textEllipsis;
-    width: calc(var(--width, 256px) - $s-80);
     color: var(--title-foreground-color-hover);
+    margin-left: $s-2;
+    text-align: left;
   }
-  .special-subtitle {
-    padding-left: $s-4;
-    color: var(--title-foreground-color);
-    text-transform: initial;
-  }
+
   .file-link {
     @extend .button-tertiary;
     height: $s-32;
